:lipstick: add style

--- a/SASS/base/_base.scss
+++ b/SASS/base/_base.scss
@@ -7,6 +7,6 @@
 @import "general/general";
 
 // FONTS ================================
-//@import "fonts/font-weight";
-//@import "fonts/text-transform";
-//@import "fonts/letter-spacing";
+@import "fonts/font-weight";
+@import "fonts/text-transform";
+@import "fonts/letter-spacing";
