--- a/SASS/components/_components.scss
+++ b/SASS/components/_components.scss
@@ -2,9 +2,9 @@
 
 
 // ACTION ===========================================
-//@import "action/scroll";
-//@import "action/scrollTop";
-//@import "action/switchmode";
+@import "action/scroll";
+@import "action/scrollTop";
+@import "action/switchmode";
 
 
 // BRADCRUMB ========================================
@@ -12,7 +12,7 @@
 
 
 // BORDER ===========================================
-//@import "border/";
+@import "border/radius";
 
 
 // CARD =============================================
@@ -44,9 +44,9 @@
 
 
 // NAVIGATION =======================================
-//@import "navigation/nav-lang";
-//@import "navigation/nav-network";
-//@import "navigation/nav-vertical";
+@import "navigation/nav-lang";
+@import "navigation/nav-network";
+@import "navigation/nav-vertical";
 
 
 // PAGINATION =======================================
