--- a/SASS/elements/_elements.scss
+++ b/SASS/elements/_elements.scss
@@ -7,11 +7,11 @@
 
 
 // BUTTON ==================================================
-//@import "button/btn";
+@import "button/btn";
 
 
 // CONTAINER ===============================================
-//@import "container/my-container";
+@import "container/my-container";
 
 
 // CONTENT =================================================
@@ -22,9 +22,9 @@
 // @import "core/";
 
 // DISPLAY =================================================
-//@import "display/flex";
-//@import "display/grid";
-//@import "display/order";
+@import "display/flex";
+@import "display/grid";
+@import "display/order";
 
 // EFFECTS =================================================
 //@import "effects/";
@@ -43,9 +43,9 @@
 
 
 // PICTURE =================================================
-//@import "picture/box";
-//@import "picture/polygone";
-//@import "picture/profile";
+@import "picture/box";
+@import "picture/polygone";
+@import "picture/profile";
 
 
 // PROGRESS ================================================
