--- a/SASS/layout/_layout.scss
+++ b/SASS/layout/_layout.scss
@@ -2,15 +2,16 @@
 
 // THEME ==================================================
 //@import 'theme/light';
-//@import "theme/dark";
+@import "theme/dark";
 
 // CORE ===================================================
-//@import "core/header";
-//@import "core/footer";
+@import "core/header";
+@import "core/footer";
 
 // PAGE ===================================================
 //@import "page/errorpage";
 //@import "page/";
 
 // SECTION ================================================
+@import "section/all";
 //@import "section/";
