--- a/SASS/utilities/_utilities.scss
+++ b/SASS/utilities/_utilities.scss
@@ -4,40 +4,39 @@
 // =======================================================
 // VARIABLES
 // =======================================================
-//@import "variables/flaticons";
-//@import "variables/typographies";
-//@import "variables/colors";
+@import "variables/flaticons";
+@import "variables/typographies";
+@import "variables/colors";
 
 
 // =======================================================
 // MIXINS
 // =======================================================
 // responsive ...............................
-//@import "mixins/responsive/breakpoint";
-//@import "mixins/responsive/landscape";
+@import "mixins/responsive/breakpoint";
+@import "mixins/responsive/landscape";
 
 // background ...............................
-//@import "mixins/background/bg-gradient";
-//@import "mixins/background/bg-image";
+@import "mixins/background/bg-gradient";
+@import "mixins/background/bg-image";
 
 // boxes ...................................
-//@import "mixins/boxes/box-shadow";
+@import "mixins/boxes/box-shadow";
 
 // flex-grid ................................
-//@import "mixins/flex-grid/align";
-//@import "mixins/flex-grid/flexbox";
-//@import "mixins/flex-grid/grid";
-//@import "mixins/flex-grid/justify";
+@import "mixins/flex-grid/align";
+@import "mixins/flex-grid/flexbox";
+@import "mixins/flex-grid/grid";
+@import "mixins/flex-grid/justify";
 
 // other ....................................
-//@import "mixins/other/tranform";
-//@import "mixins/other/transition";
-//@import "mixins/other/filter";
-//@import "mixins/other/objectfit";
+@import "mixins/other/tranform";
+@import "mixins/other/transition";
+@import "mixins/other/filter";
+@import "mixins/other/objectfit";
 
 // =======================================================
 // ANIMATIONS
 // =======================================================
-//@import "animations/morph";
-//@import "animations/fadeIn";
-//@import "animations/animationProgress";
+@import "animations/morph";
+@import "animations/fadeIn";
