--- a/SASS/base/general/_general.scss
+++ b/SASS/base/general/_general.scss
@@ -1,6 +1,129 @@
 // main: ../_base.scss
 
-html{
-    background: #1D262D;
-    color: #F8FAFB;
+// Use a better box model (opinionated).
+*,
+::before,
+::after {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    //@include transition(all .2s linear);
+}
+
+html {
+    font-size: 100%;
+    scroll-behavior: smooth;
+}
+
+body{
+    line-height: 1.5;
+    //font-size: calc(0.55em + 1vmin);
+    font-size: calc((1 - 1) * 1.2vw + 1rem);
+    font-family: $font-primary;
+    overflow-x: hidden;
+    background: $color-light;
+    color: $color-dark;
+}
+
+
+a{
+    color: inherit;
+    text-decoration: none;
+    &:hover{
+        color: inherit;
+        text-decoration: none;
+    }
+}
+
+ul {
+    list-style: none;
+}
+
+// HEADING
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    line-height: 1;
+    font-family: $font-secondary;
+    //font-weight: 700;
+}
+
+h1{
+    font-size: calc(2em + 1vmin);
+    //font-size: calc(3em + 1vw);
+    //font-size: calc((3 - 1) * 1.2vw + 1rem)
+}
+
+h2{
+    font-size: calc(1.5em + 1vmin);
+    //font-size: calc(2em + 1vw);
+    //font-size: calc((2 - 1) * 1.2vw + 1rem);
+}
+
+h3{
+    font-size: (1.8em + 1em);
+    //font-size: calc(1em + 1vw);
+    //font-size: calc((1.8 - 1) * 1.2vw + 1rem);
+}
+
+.text-color{
+    color: $color-primary-dark;
+}
+
+img {
+    max-width: 100%;
+}
+
+// Width
+.w-half{
+    width: 50%;
+}
+
+.w-full{
+    width: 100%;
+}
+
+// VIVIBILITY
+.visible {
+    visibility: visible;
+}
+
+.invisible {
+    visibility: hidden;
+}
+
+// RESPONSIVE
+@include responsive(XL){
+    body{
+        padding-left: 19rem;
+    }
+}
+@include responsive(LG){
+    body{
+        padding-left: 19rem;
+    }
+}
+
+@include responsive(MD){
+    section{
+        padding: 3rem;
+    }
+}
+@include responsive(SM){
+    .w-half{
+        width: 100%;
+    }
+    section{
+        padding: 3rem;
+    }
+}
+@include responsive(XS){
+    .w-half{
+        width: 100%;
+    }
+    section{
+        padding: 3rem;
+    }
 }
