:globe_with_meridians: Add translate part 6

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: My Portfolio 2022
-Theme URI: https://enzawebdev.be/
+Theme URI: https://enzawebdev.be
 Author: Enza Lombardo
 Author URI: https://enzalombardo.be
 Description: My Portfolio online
