--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -1,6 +1,6 @@
 /*!
 Theme Name: My Portfolio 2022
-Theme URI: https://enzawebdev.be/
+Theme URI: https://enzawebdev.be
 Author: Enza Lombardo
 Author URI: https://enzalombardo.be
 Description: My Portfolio online
