--- a/SASS/layout/_layout.scss
+++ b/SASS/layout/_layout.scss
@@ -14,4 +14,5 @@
 
 // SECTION ================================================
 @import "section/all";
+@import "section/hero";
 //@import "section/";
