--- a/style.css
+++ b/style.css
@@ -1216,5 +1216,83 @@ section {
 
   .contact-social {
     margin-top: calc(2em + 1vmin); } }
+.hero-wrap {
+  min-height: calc(100vh - (1rem + 5vmin));
+  position: relative;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  .hero-wrap::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    content: "";
+    background: #191919;
+    opacity: .7;
+    z-index: 0; }
+
+.jumb-content {
+  color: #fafafa;
+  z-index: 1;
+  margin: 0 calc(15% - (1rem + 5vmin));
+  text-shadow: 4px 2px 4px rgba(9, 9, 9, 0.9); }
+  .jumb-content h3 {
+    font-size: x-large;
+    letter-spacing: 3px;
+    margin-bottom: .5rem; }
+  .jumb-content h2 {
+    line-height: 2;
+    text-transform: uppercase;
+    font-size: larger;
+    margin-top: .5rem; }
+
+.desc {
+  text-align: justify;
+  margin: 1rem 0; }
+
+.big-title span {
+  color: #b300b3; }
+
+.hight-small {
+  text-shadow: 0 0 3px #b300b3, 0 0 3px #b300b3, 0 0 3px #b300b3, 0 0 3px #b300b3, 0 0 3px #b300b3, 0 0 3px #b300b3, 0 0 3px #b300b3, 0 0 3px #b300b3; }
+.hight-normal {
+  text-shadow: -5px -5px 5px #b300b3, -5px 5px 5px #b300b3, 5px -5px 5px #b300b3, 5px 5px 5px #b300b3; }
+.hight-large {
+  color: #fafafa;
+  text-shadow: 0 0 10px #8f4ec7, 0 0 10px #8f4ec7, 0 0 10px #8f4ec7, 0 0 5px #8f4ec7, 0 0 5px #8f4ec7, 0 0 5px #8f4ec7; }
+
+@media only screen and (min-width: 480px) and (max-width: calc(768px - 1px)) {
+  .big-title {
+    font-size: 1.6rem; }
+
+  .jumb-content h2, .jumb-content h3 {
+    font-size: 1rem; }
+
+  .desc {
+    margin-bottom: 1.5rem;
+    font-size: small; } }
+@media only screen and (min-width: 320px) and (max-width: calc(480px - 1px)) {
+  .big-title {
+    font-size: 1.6rem; }
+
+  .jumb-content h2, .jumb-content h3 {
+    font-size: 1rem; }
+
+  .desc {
+    margin-bottom: 1.5rem;
+    font-size: small; } }
 
 /*# sourceMappingURL=style.css.map */
