--- a/SASS/layout/_layout.scss
+++ b/SASS/layout/_layout.scss
@@ -15,4 +15,5 @@
 // SECTION ================================================
 @import "section/all";
 @import "section/hero";
+@import "section/about";
 //@import "section/";
