:lipstick: [front] add style

--- a/SASS/layout/_layout.scss
+++ b/SASS/layout/_layout.scss
@@ -9,7 +9,7 @@
 @import "core/footer";
 
 // PAGE ===================================================
-//@import "page/errorpage";
+@import "page/errorpage";
 //@import "page/";
 
 // SECTION ================================================
