--- a/style.css
+++ b/style.css
@@ -1252,6 +1252,31 @@ header {
 
   .legal-list {
     justify-content: center; } }
+.error {
+  margin: 0 auto;
+  text-align: center;
+  padding: 3%;
+  padding-top: 10%; }
+  .error-code {
+    bottom: 60%;
+    color: #2d353c;
+    font-size: 7em;
+    line-height: 1.5;
+    margin-bottom: 10px;
+    font-family: "Eczar", serif; }
+  .error-desc p {
+    margin: 2% 15% 5%; }
+  @media only screen and (min-width: 480px) and (max-width: calc(768px - 1px)) {
+    .error-desc p {
+      margin: 2em .5em;
+      padding: 0;
+      font-size: smaller; } }
+  @media only screen and (min-width: 320px) and (max-width: calc(480px - 1px)) {
+    .error-desc p {
+      margin: 2em .5em;
+      padding: 0;
+      font-size: smaller; } }
+
 section {
   padding: 1rem;
   min-height: 100vh; }
